--- a/backend/package.json
+++ b/backend/package.json
@@ -2,9 +2,10 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "nodemon index.ts",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,13 +19,9 @@
   },
   "homepage": "https://github.com/AndresPF/shopping-checklist-app#readme",
   "dependencies": {
-    "@types/node": "^16.11.26",
-    "@types/express": "^4.17.13",
-    "express": "^4.17.3",
-    "typescript": "^4.6.3"
+    "express": "^4.17.3"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15",
-    "ts-node": "^10.7.0"
+    "nodemon": "^2.0.15"
   }
 }
