--- a/backend/package.json
+++ b/backend/package.json
@@ -2,10 +2,9 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "type": "module",
+  "main": "index.ts",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "nodemon index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,9 +18,18 @@
   },
   "homepage": "https://github.com/AndresPF/shopping-checklist-app#readme",
   "dependencies": {
-    "express": "^4.17.3"
+    "@types/node": "^17.0.30",
+    "express": "^4.17.3",
+    "mongodb": "^4.5.0",
+    "mongoose": "^6.3.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "@types/express": "^4.17.13",
+    "@types/uuid": "^8.3.4",
+    "eslint": "^8.14.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "nodemon": "^2.0.15",
+    "ts-node": "^10.7.0"
   }
 }
