--- a/backend/package.json
+++ b/backend/package.json
@@ -18,15 +18,17 @@
   },
   "homepage": "https://github.com/AndresPF/shopping-checklist-app#readme",
   "dependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
     "@types/node": "^17.0.30",
+    "@types/uuid": "^8.3.4",
+    "cors": "^2.8.5",
     "express": "^4.17.3",
     "mongodb": "^4.5.0",
     "mongoose": "^6.3.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@types/express": "^4.17.13",
-    "@types/uuid": "^8.3.4",
     "eslint": "^8.14.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "nodemon": "^2.0.15",
