--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "@types/node": "^17.0.30",
     "@types/uuid": "^8.3.4",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "mongodb": "^4.5.0",
     "mongoose": "^6.3.1",
